fixed delete post
fixed delete post

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -9,3 +9,5 @@
 {{/if}}
 
 <button type="submit" class="btn"><a class="link" href="/dashboard/create">+ New Post</a></button>
+
+<script src="/javascript/deletePost.js"></script>
