--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -16,11 +16,13 @@
             </div>
         </div>
         <div class="col-md-4">
-            <button class="btn btn-sm btn-danger delete-post-btn" data-id="{{post.id}}">DELETE</button>
+            <button class="btn btn-sm btn-danger delete-post-btn mb-2" data-id="{{post.id}}">DELETE</button>
         </div>
 
-        {{#if comments.length}}
+        {{>comment}}
+        {{#if comment.length}}
         {{#each comments as |comment|}}
+
         <div class="col d-flex justify-content-center mb-2">
             <div class="card w-50 text-white bg-secondary border-light">
                 <div class="card-body">
