connect to jawsdb

--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -20,7 +20,7 @@
         </div>
 
         {{>comment}}
-        {{#if comment.length}}
+        {{#if comments.length}}
         {{#each comments as |comment|}}
 
         <div class="col d-flex justify-content-center mb-2">
