--- a/views/partials/comment.handlebars
+++ b/views/partials/comment.handlebars
@@ -3,7 +3,7 @@
         <h3 class="card-header"></h3>
         <section class="comment card-body">
             <div class="text">
-                {{comment.comment_text}}
+                {{comment_text}}
             </div>
             <p class="card-text"><small class="text-white">Commented by {{user.username}} <cite
                         title="Source Title">{{format_date createdAt}}</cite></small></p>
