--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -14,6 +14,7 @@
 
     <div class="card-content">
         <div class="content has-text-justified">
+            <p class="post_id hidden">{{id}}</p>
             {{post_content}}
         </div>
         <div class="is-pulled-right">
